--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">aa-sample</string>
+    <string name="aa_activity">AAActivity</string>
+    <string name="changed">Changed!!!</string>
 </resources>
